    installed in /usr/share/bash-completion/completions.
  * Rename conffiles for logind and journald.
  * Rename udev-gtk-udeb → libudev1-udeb to better reflect its actual contents.
  * Build two flavours: a regular build and one for the udev udebs with
    reduced features/dependencies.
  * Create a few compat symlinks for the udev package, most notably
    /sbin/udevadm and /sbin/udevd.

 -- Michael Biebl <biebl@debian.org>  Wed, 17 Jul 2013 16:57:58 +0200

systemd (44-12) unstable; urgency=low

  * Cherry-pick e17187 from upstream to fix build failures with newer glibc
    where the clock_* symbols have been moved from librt to libc.
    Closes: #701364
  * If the new init-system-helpers package is installed, make the
    debian-enable-units script a no-op. The auto-enabler was meant as a
    temporary workaround and will be removed once all packages use the new
    helper.
  * Update the checks which test if systemd is the active init. The
    recommended check is [ -d /run/systemd/system ] as this will also work
    with a standalone systemd-logind.
  * Set Maintainer to pkg-systemd-maintainers@lists.alioth.debian.org. Add
    Tollef and myself as Uploaders.
  * Stop building the GUI bits. They have been split into a separate source
    package called systemd-ui.

 -- Michael Biebl <biebl@debian.org>  Thu, 20 Jun 2013 01:32:16 +0200

systemd (44-11) unstable; urgency=low

  * Team upload.
  * Run debian-enable-units.service after sysinit.target to ensure our tmp
    files aren't nuked by systemd-tmpfiles.
  * The mountoverflowtmp SysV init script no longer exists so remove that
    from remount-rootfs.service to avoid an unnecessary diff to upstream.
  * Do not fail on purge if /var/lib/systemd is empty and has been removed
    by dpkg.

 -- Michael Biebl <biebl@debian.org>  Wed, 13 Mar 2013 08:03:06 +0100

systemd (44-10) unstable; urgency=low

  * Team upload.
  * Using the return code of "systemctl is-enabled" to determine whether we