@@ -1,11 +1,0 @@
-[Unit]
-Description=Automatically Enable Systemd Units
-ConditionPathExists=/var/lib/systemd/run-debian-enable-units
-DefaultDependencies=no
-Wants=sysinit.target
-After=sysinit.target
-
-[Service]
-ExecStart=/lib/systemd/debian-enable-units
-Type=oneshot
-RemainAfterExit=true
